--- a/style/main.css
+++ b/style/main.css
@@ -48,7 +48,7 @@
     position: absolute;
     top: 100%;
     left: 0;
-    width: 80vw;
+    width: 100%;
     min-width: 200px;
     height: auto;
     text-align: center;
