--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,13 @@
+body {
+    color: white;
+    font-size: 2vw;
+    text-shadow:
+            .1vw 0vw .25vw #181817,
+            .15vw 0vw .25vw #272726,
+            .1vw 0vw .1vw #272726;
+    overflow: hidden;
+}
+
 .header{
     display: flex;
     justify-content: center;
