--- a/style/main.css
+++ b/style/main.css
@@ -66,7 +66,7 @@ body {
     justify-content: center;
     background-color: rgba(13, 14, 14, 0.85);
     box-shadow: rgba(0, 0, 0, 0.35) 0px 3px 7px 0px;
-
+    z-index: 10000;
 }
 
 .char_icon:hover + .characters{
