--- a/style/main.css
+++ b/style/main.css
@@ -117,9 +117,11 @@ a.icon_navbar:hover:after {
     padding: 0 10% 0 10%;
     width: 65px;
     height: 65px;
+    transition: all 0.2s;
 }
 
 .a_icon img:hover {
     transform: scale(1.1);
     transition: all 0.2s;
 }
+
