--- a/style/charactersNavBar.css
+++ b/style/charactersNavBar.css
@@ -1,6 +1,6 @@
 #content {
     position: absolute;
-    top: 8.5vw;
+    top: 10vw;
     right: 5%;
     display: flex;
     flex-direction: column;
@@ -15,7 +15,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0;
+    padding-bottom: 4%;
 }
 
 .icon_navchara {
