--- a/style/charactersNavBar.css
+++ b/style/charactersNavBar.css
@@ -16,6 +16,7 @@
     justify-content: center;
     align-items: center;
     padding-bottom: 4%;
+    padding-right: 0;
 }
 
 .icon_navchara {
@@ -46,5 +47,32 @@
 #text {
     position: relative;
     top: -1vw;
-    padding-top: 2%;
+    left: 6%;
+}
+
+/*.point {*/
+/*    width: 0.6vw;*/
+/*    height: 0.6vw;*/
+/*    background-color: whitesmoke;*/
+/*    box-shadow: 0 0 0.5vw lightgray;*/
+/*    border-radius: 5vw;*/
+/*    cursor: pointer;*/
+/*    opacity: 0.9;*/
+/*    margin-left: 3vw;*/
+/*}*/
+
+/*.point:hover{*/
+/*    filter: brightness(10);*/
+/*    transform: scale(1.04);*/
+/*}*/
+
+.navcontent {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.materials {
+    display: flex;
+    flex-direction: column;
 }
