--- a/style/main.css
+++ b/style/main.css
@@ -5,7 +5,7 @@ body {
             .1vw 0vw .25vw #181817,
             .15vw 0vw .25vw #272726,
             .1vw 0vw .1vw #272726;
-    overflow: hidden;
+    overflow-x: hidden;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -153,3 +153,6 @@ a.icon_navbar:hover:after {
     transition: all 0.2s;
 }
 
+footer {
+    background-color: #272726;
+}
