--- a/style/main.css
+++ b/style/main.css
@@ -155,18 +155,27 @@ a.icon_navbar:hover:after {
 
 footer {
     background-color: #272726;
+    position: absolute;
+    z-index: 30000;
 }
 
 .resized img {
-    width: 65%;
     left:-12%;
 }
 
 .resized_toobig img {
-    width: 55%;
     left:-10%;
 }
 
 .yanfei_box img {
     left:-10%; /*yanfei splash not clean, left needed*/
+}
+
+.kazuha_box img {
+    left:-15%;
+    top:10%;
+}
+
+.hutao_box img{
+    left:-8%;
 }
