--- a/style/content.css
+++ b/style/content.css
@@ -6,7 +6,7 @@
     width: 6vw;
 }*/
 
-.weaponsContent , .artifacts{
+.weaponsContent , .artifacts, .materials, .talents{
     top: 2vw;
     display: none;
     align-items: center;
