--- a/style/content.css
+++ b/style/content.css
@@ -14,11 +14,11 @@
     position: relative;
 }
 
-.weaponsContent div:not(.page) , .artifacts div:not(.page), .materials div:not(.page){
+.weaponsContent div:not(.page), .materials div:not(.page), .artifacts_set1 div:not(.page), .artifacts_set2 div:not(.page){
     display: flex;
     flex-direction: column;
     position: relative;
-    left: 4%;
+    left: 2vw;
 }
 
 .rare2 {
@@ -122,4 +122,13 @@
 
 .talents .page {
     left: 14vw;
+}
+
+.artifacts_set1, .artifacts_set2{
+    display: flex;
+    align-items: center;
+}
+
+.artifacts_set2 {
+    display:none;
 }
