--- a/style/main.css
+++ b/style/main.css
@@ -68,13 +68,13 @@ body {
     background-color: rgba(13, 14, 14, 0.85);
     box-shadow: rgba(0, 0, 0, 0.35) 0px 3px 7px 0px;
     z-index: 10000;
-    /*animation: rotateX 0.4s 180ms ease-in-out both;*/
+    animation: rotateX 0.4s 180ms ease-in-out both;
     transform-origin: top center
 }
 
-.characters:not(:hover) {
-    animation: rotateX 0.4s 180ms ease-in-out both;
-}
+/*.characters:not(:hover) {*/
+/*    animation: rotateX 0.4s 180ms ease-in-out both;*/
+/*}*/
 
 /*.characters {*/
 /*    animation: rotateX-end 0.4s 180ms ease-in-out both;*/
