--- a/style/main.css
+++ b/style/main.css
@@ -69,17 +69,17 @@ body {
     background-color: rgba(13, 14, 14, 0.85);
     box-shadow: rgba(0, 0, 0, 0.35) 0px 3px 7px 0px;
     z-index: 10000;
-    animation: rotateX 0.4s 180ms ease-in-out both;
+    /*animation: rotateX 0.4s 180ms ease-in-out both;*/
     transform-origin: top center
 }
 
-/*.characters:not(:hover) {*/
-/*    animation: rotateX 0.4s 180ms ease-in-out both;*/
-/*}*/
+.char_icon:hover + .characters{
+    animation: rotateX 0.4s 180ms ease-in-out both;
+}
 
-/*.characters {*/
-/*    animation: rotateX-end 0.4s 180ms ease-in-out both;*/
-/*}*/
+.char_icon + .characters {
+    animation: rotateX-end 0.4s 180ms ease-in-out;
+}
 
 @keyframes rotateX {
 
