--- a/style/content.css
+++ b/style/content.css
@@ -128,6 +128,10 @@
     height: 4vw;
 }
 
+/*.material img {*/
+/*    transform: scale(0.3);*/
+/*}*/
+
 .materials div {
     flex-direction: row;
     align-items: center;
