--- a/style/content.css
+++ b/style/content.css
@@ -134,7 +134,12 @@
     top: -2.5vw;
     opacity: 0.7;
     letter-spacing: 8px;
+    border-bottom: 2px solid rgba(10, 10, 10, 0.45);
+    height: 20px;
+    width: 300px;
+    line-height: 1px;
 }
+
 
 .materials div div {
     display: flex;
