--- a/style/main.css
+++ b/style/main.css
@@ -32,7 +32,7 @@ body {
 }
 
 
-.nav_icon_header:hover, .dropdown:hover .char_icon {
+.nav_icon_header:hover, .dropdown:hover .nav_icon_header {
     transform: scale(1.04);
     filter: brightness(1);
 }
