--- a/style/content.css
+++ b/style/content.css
@@ -1,5 +1,10 @@
 .lore {
     font-size: 1.25vw;
+    background-color: rgba(13, 14, 14, 0.85);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 0px 10px 8px;
+    border: 0.2vw solid #efd5a3;
+    padding: 25px;
+    border-radius: 4px;
 }
 
 .rare1 {
