--- a/style/content.css
+++ b/style/content.css
@@ -160,6 +160,7 @@
     justify-content: flex-start;
     flex-direction: column;
     align-items: center;
+    margin: 0 0.5vw;
 }
 
 .talents div:not(.page) img {
