--- a/style/content.css
+++ b/style/content.css
@@ -1,8 +1,8 @@
 .lore {
     font-size: 1.25vw;
-    background-color: rgba(13, 14, 14, 0.85);
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 0px 10px 8px;
-    border: 0.2vw solid #efd5a3;
+    background-color: rgba(13, 14, 14, 0.55);
+    box-shadow: rgb(0 0 0 / 35%) 0px 0px 10px 8px;
+    border: 0.2vw solid white;
     padding: 25px;
     border-radius: 4px;
 }
@@ -181,6 +181,7 @@
 .talentsName + span {
     color: darkgray;
     margin-bottom: 1%;
+    font-size: 1vw;
 }
 
 .talentsType {
@@ -201,8 +202,8 @@
     display: none;
 }
 
-.talentPass {
-    margin: 0 1vw;
+.talentPass div {
+    max-width: 14vw;
 }
 
 
