changed materials img display to be smaller

--- a/style/content.css
+++ b/style/content.css
@@ -107,8 +107,9 @@
 
 .material {
     border-radius: 1.5vw;
-    width: 4vw;
-    height: 4vw;
+    width: 3vw;
+    height: 3vw;
+    padding: 0.5vw;
 }
 
 .artifacts_set1, .artifacts_set2, .weaponsContent div, .ascensionContent{
