--- a/style/footer.css
+++ b/style/footer.css
@@ -1,9 +1,13 @@
 footer {
     position: absolute;
     z-index: 5000;
-    width: 101vw;
     background-color: #111;
-    margin: 0;
-    top: 69vw;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    bottom: -71vw;
     left: -0.7vw;
+    margin: 5vw 0;
+    width: 101vw;
+    height: 20vw;
 }
